# scivis-kit

./: .gitignore  CMakeLists.txt  README
cmake/: vtk-config.cmake
lab/: CMakeLists.txt  Makefile  README
lab/include/: CImg.h
lab/src/: CMakeLists.txt  common.h  field.h  grid.h  netcdfexp.cpp  solution.h  task1a.cpp  task1b.cpp  task1c.cpp  task2.cpp  task2a.cpp  task2b.cpp  task2c.cpp  util.h
lab/src/container/: field.h  grid.h  solution.h
lab/src/renderer/: PieceWiseFunction.h  TransferFunction.h  VolumeRenderer.cpp  VolumeRenderer.h
lab/test/: CMakeLists.txt
lab/test/lab1/: CMakeLists.txt  task1a.cpp  task1b.cpp  task1c.cpp  task2a.cpp  task2b.cpp  task2c.cpp
lab/test/lab2/: main.cpp
lab/test/vec/: tornado.ipynb  vec_io.py
lab/vis/: raw2nc.ipynb  raw2nc.py  raw2nc_1c.py
pycurvis/: eval.ipynb  mantle.ipynb  osc.sh  osc_mlp.sh  osc_vls_md.sh  phys_comp_data.ipynb  root_finding.ipynb  test.ipynb  test.py  test_block.py  torchscript.ipynb  train.py  train_block.py  vis_io.py
pycurvis/cfg/: configs.py  nn.yaml  nn_block.yaml  nn_block_half.yaml  nn_narrow.yaml  nn_single_block.yaml  nn_single_block_attn.yaml  nn_vls_attn.yaml  nn_vls_dense.yaml  nn_vls_imp.yaml  nn_vls_lg.yaml  nn_vls_md.yaml  nn_vls_res.yaml  nn_vls_siren.yaml  nn_vls_sm.yaml  nntest.yaml  nntest_block_half.yaml  nntest_single_block.yaml  vls_siren_aug.yaml
pycurvis/data/: .gitignore  data.py  vec_io.py  vis_io.py
pycurvis/eval/: .gitignore  eval.ipynb  util.py
pycurvis/network/: network.py
pycurvis/util/: args.py  phys2comp.py  utils.py
src/: CMakeLists.txt  common.h
src/common/: ParticleTracer.h  io.h  numerical.h  util.h
src/container/: field.h  grid.h  grid_base.h  grid_cartesian.h  grid_curvilinear.h  grid_rectlinear.h  solution.h
src/renderer/: PieceWiseFunction.h  TransferFunction.h  VolumeRenderer.cpp  VolumeRenderer.h
test/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt
test/final/: CMakeLists.txt  readSG.cpp  readvts.ipynb  render.cpp  render_neural.cpp  vtktest.cpp
test/final/pytorch/: attn.pt  dense.pt  param.raw  res.pt  siren.pt  traced_2499.pt  traced_2499_1.pt  traced_7300_1.pt
test/final/srctmp/: torchTest.cpp  vtktest.cpp
test/lab1/: CMakeLists.txt  README  task1a.cpp  task1b.cpp  task1c.cpp  task2a.cpp  task2b.cpp  task2c.cpp
test/lab2/: README  lab2_image_comparison.docx  run.sh  task1.cpp  task2.cpp  testgrad.cpp
test/lab3/: README  task1_2.cpp  task3.cpp  task4.cpp  vis.py
test/src/: CMakeLists.txt  curvis.cpp  eigenTest.cpp  tfTest.cpp
test/vec/: vis_io.py
tmp/data/sub/: task2_random_value.txt
vis/: raw2nc.ipynb
